--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,14 @@ project:
   type: website
 
 website:
-  title: "My Explorations with LLMs"
+  title: "My Explorations with LLMs in Social Contexts"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/ezou626
       - icon: twitter
-        href: https://twitter.com
+        href: https://x.com/EDubsZ123
 format:
   html:
     theme: cosmo
