claude, google, etc.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Blog env"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "anthropic>=0.75.0",
     "convokit>=4.0.0",
+    "google-generativeai>=0.8.6",
     "ipykernel>=7.1.0",
     "jupyterlab>=4.5.1",
+    "networkx>=3.6.1",
     "openai>=1.54.0",
     "python-dotenv>=1.0.1",
     "spacy>=3.8.11",
