--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jupyterlab>=4.5.1",
     "networkx>=3.6.1",
     "openai>=1.54.0",
+    "pip>=25.3",
     "python-dotenv>=1.0.1",
     "spacy>=3.8.11",
 ]
